# OpenAgenticVTuber

./: .gitattributes  .gitignore  CLAUDE.md  PROJECT_DESIGN.md  README.md  index.html  package-lock.json  package.json
sidecar/: .vts_token.txt  pyproject.toml
sidecar/schemas/: avatar_overrides.schema.json
sidecar/scripts/: __init__.py  plot_speech_evidence.py  plumbing_harness.py  teto_smoke_pass.py  vts_introspect_smoke.py
sidecar/src/sidecar/: __init__.py  __main__.py  main.py
sidecar/src/sidecar/admin/: __init__.py  audio.py  avatar.py  plugin.py  rig_capabilities.py  status.py
sidecar/src/sidecar/audio/: __init__.py  config.py  redaction.py
sidecar/src/sidecar/avatar/: __init__.py  capabilities.py  cdi3_reader.py  import_detect.py  motion3_meta.py  normalize.py  overrides.py  overrides_writer.py  rig_capabilities.py
sidecar/src/sidecar/compositor/: __init__.py  clamp.py  compositor.py  cursor_driver.py  easing.py  hud_tap.py  idle_driver.py  (+6 more)
sidecar/tests/: __init__.py  conftest.py  test_actions_extractor.py  test_arch06_single_writer.py  test_audio_config.py  test_audio_payload_helpers.py  test_audio_redaction.py  test_avatar_capabilities.py  test_gateway_smoke.py  test_llm_gateway.py  test_orchestrator_turn.py  test_phase4_bootstrap.py  test_pyvts_import.py  test_sentence_divider.py  test_setup_test_handlers.py  test_sidecar_boot.py  test_speech_mouth_driver.py  test_tts_gateway.py  test_tts_manager.py  test_ws_echo.py
sidecar/tests/admin/: test_audio_status_endpoint.py  test_audio_stt_cloud.py  test_audio_stt_local.py  test_audio_test_tts_endpoint.py  test_audio_voice_input_endpoint.py  test_plugin_status_endpoint.py  test_reference_audio_validation_endpoint.py  test_rig_capabilities_endpoint.py  test_status_endpoint.py
sidecar/tests/architecture/: test_pyvts_writer_singleton.py
sidecar/tests/avatar/: __init__.py  conftest.py  test_admin_avatar.py  test_extract_cubism_bare.py  test_extract_cubism_named.py  test_extract_olvt.py  test_extract_vts.py  test_import_detect.py  test_motion3_meta.py  test_normalize.py  test_overrides.py  test_overrides_loader.py  test_overrides_writer.py  test_reimport.py  test_rig_capabilities.py
sidecar/tests/compositor/: __init__.py  conftest.py  test_body_sway_registry.py  test_clamp_lock_filter.py  test_compositor.py  test_cursor_driver.py  test_cursor_driver_eye_tracking.py  test_cursor_driver_namespace.py  test_hud_tap.py  test_idle_driver.py  test_intent_driver.py  test_lock_filter.py  test_param_id_resolver.py  test_plugin_adapter.py  test_scheduler.py  test_speech_driver.py
sidecar/tests/orchestrator/: conftest.py  test_code_extractor.py  test_dispatch_routing.py  test_tts_preprocessor.py
sidecar/tests/parser/: test_reserved.py
sidecar/tests/plugins/: test_api.py  test_default_plugin.py  test_default_plugin_integration.py  test_default_plugin_parser.py  test_manifest_loader.py  test_manifest_watcher.py  test_plugin_sdk.py  test_prompt_section.py  test_sample_plugin.py  test_supervisor.py  test_teto_catalog_strict_variants.py
sidecar/tests/scripts/: test_plot_speech_evidence.py  test_plumbing_harness.py
sidecar/tests/stt/: test_code_switch_eval_report.py  test_code_switch_eval_runner.py  test_code_switch_eval_scoring.py  test_faster_whisper_provider.py  test_funasr_provider.py  test_groq_stt_provider.py  test_live_local_stt.py  test_local_stt_runtime_dependencies.py  test_model_cache.py  test_openai_stt_provider.py  test_stt_registry.py
sidecar/tests/tts/: test_gpt_sovits_provider.py
sidecar/tests/vts/: __init__.py  conftest.py  test_discrete_dispatcher.py  test_event_completion_tracker.py  test_pyvts_writer.py  test_variant_state_manager.py  test_vts_introspect_smoke.py  test_window_detect.py
sidecar/tests/ws/: test_hud_lock_roundtrip.py  test_hud_session_only.py  test_hud_ws.py  test_stop_turn.py
(+710 files in other folders)
