[project]
name = "sidecar"
version = "0.1.0"
description = "AgenticLLMVTuber Python sidecar — FastAPI + uvicorn + pyvts"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "websockets>=14,<15",
    "pydantic>=2.5",
    "httpx>=0.28",
    "psutil>=7.0",
    "litellm==1.83.14",
    "pyvts==0.3.3",
    "piper-tts==1.4.2",
    "langdetect>=1.0.9",
    "loguru>=0.7",
    "pysbd==0.3.4",
    "pyyaml>=6.0",
    "sounddevice==0.5.5",
    "soundfile==0.13.1",
    "huggingface-hub>=0.23",
    "modelscope>=1.16",
    "pywin32==311 ; sys_platform == 'win32'",
    "opensimplex==0.4.5.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "jsonschema==4.26.0",
    "contracts",
    "watchdog==6.0.0",
    "faster-whisper==1.2.1",
    "funasr==1.3.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
]

[project.scripts]
teto-smoke-pass = "scripts.teto_smoke_pass:main_sync"

[tool.uv.sources]
pyvts = { path = "vendor/pyvts" }
contracts = { path = "../packages/contracts/py", editable = true }

[tool.uv]
override-dependencies = [
    "jsonschema==4.26.0",
]
dev-dependencies = [
    "ruff",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sidecar"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_stt: opt-in live STT acceptance tests that require local model/audio env vars or network downloads",
]
